2008-01-24  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/glade.py (GladeWindow.__init__): Make the
	window modal too, so you can't click on the main window when
	running the configurationwizard.

2008-01-21  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/gtk/parts.py:
	Fix KeyError when hovering on a lost component.

2008-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_component_base_scheduler.py:
	  Add a test case for when a recurring event has an UNTIL that is
	  past "now".
	* flumotion/component/base/scheduler.py:
	  Fix Event.__init__() for it

2008-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/scheduler.py:
	* flumotion/test/test_component_base_scheduler.py:
	  Add test-case-name lines.
	  Move public now() to test suite, which is its only consumer.
	  Document API some more.

2008-01-18  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/client.py (AdminClientWindow._open_connection): 
	Add an assert, to make sure we always send in a PBConnectionInfo 
	instance.
	(AdminClientWindow.recent_activate): Send in conn.info.
	Fixes #835

	* flumotion/admin/gtk/parts.py (ComponentsView.__init__): 
	Check for PyGTK 2.12.1 or higher, to avoid a crash in PyGTK bug #479012

2008-01-17  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/componentview.py:
	* flumotion/admin/text/view.py:
	* flumotion/manager/admin.py:
	* flumotion/wizard/configurationwizard.py:
	Rename getEntry back to getEntryByType, reverses part of [6081]

2008-01-15  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/componentui.py: 
	Update the name here too, to avoid breaking the build

	* flumotion/common/registry.py:
	* flumotion/manager/admin.py:
	* flumotion/wizard/productionsteps.py:
	Make RegistryWizardEntry Copyable.
	Return a list of WizardEntryState in getWizardEntries, update
	documentation and callsite.

2008-01-15  Johan Dahlin  <johan@gnome.org>
